--- a/client/src/index.css
+++ b/client/src/index.css
@@ -97,6 +97,8 @@ main {
   cursor: pointer;
   font-size: 1rem;
   gap: 6px;
+  text-decoration: none;
+  color: var(--clr-secondary)
 }
 
 .btn svg {
