--- a/client/src/index.css
+++ b/client/src/index.css
@@ -343,3 +343,25 @@ footer {
     font-size: 1.25rem;
   }
 }
+.site-footer {
+  background-color: #1e1e1e;
+  color: white;
+  padding: 1rem 2rem;
+  text-align: center;
+}
+
+.site-footer .container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.site-footer a {
+  color: #f4b400;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.site-footer a:hover {
+  text-decoration: underline;
+  color: #ffcc00;
+}
